# TensorflowCpp

./: .gitignore  CMakeLists.txt  ConsoleOutput.h  CouetteAnalytical.py  FirstWorkingNN.cpp  LoadModel.cpp  Main.cpp  ModelCreator.py  ModelCreator_ProbWorkingConfig.py  ModelCreator_actually working prob.py  NN.h  NeuralNet.cpp  NeuralNet.h  ReadCSV.cpp  ReadCSV.h  ReadCSV_bloated.cpp  ReadCSV_bloated.h  Standalone.cpp  TensorCalc.cpp  TensorCalc.h  Test.cpp  basicCSVplotter.py  config.csv  data_plotter.py  outputGenerator.py  pyNetworkCreator.py  pyNetworkCreatorProbabilistic.py  rawcomp.py  sgd.py  small_test.cpp
model_prob_30_s2_b6/: saved_model.pb
model_prob_30_s2_b6/variables/: variables.index
model_prob_60_s1_b4/: saved_model.pb
model_prob_60_s1_b4/variables/: variables.index
model_prob_batch3/: saved_model.pb
model_prob_batch3/variables/: variables.index
model_prob_s2_b3/: saved_model.pb
model_prob_s2_b3/variables/: variables.index
model_prob_s2_b6/: saved_model.pb
model_prob_s2_b6/variables/: variables.index
